charts/templates/network-policies/deny-nginx-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-my-nginx-egress
spec:
  podSelector:
    matchLabels:
      app: my-nginx
  policyTypes:
    - Egress
  egress:
    # Allow DNS
    - ports:
        - protocol: UDP
          port: 53
          # Here we allow all egress traffic to 53/udp at least for the time being.
          # This is needed as match against namespace name is not reliable, and it can break all name resolutions.
          # Note that this will impose a theoretical risk that it can be exploited to conduct DDoS against any DNS servers on the Internet.
          #
          # See also:
          # https://kubernetes.io/docs/concepts/services-networking/network-policies/#targeting-a-namespace-by-its-name
          # https://docs.projectcalico.org/security/tutorials/kubernetes-policy-advanced#5-allow-dns-egress-traffic
          #
          # to:
          #   - podSelector:
          #       matchLabels:
          #         k8s-app: kube-dns
          #     namespaceSelector:
          #       matchLabels:
          #         kubernetes.io/metadata.name: kube-system
